@@ -45,6 +45,7 @@ Admin:
 Contributors:
 * Josh Clayton        [jdclayton.com]
 * Kim Joar Bekkelund  [kimjoar.net]
+* Glenn Rempe
 
 Also, thanks to the many of people who have pitched in on
 the development of Blueprint through our mailing list:
